# aws-envs

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/aws_envs_setup/: __init__.py
