[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aws-envs-setup"
version = "0.1.0"
description = "One-time migration tool to convert a single AWS credentials setup into a multi-environment aws-envs structure"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.9"
keywords = ["aws", "credentials", "profiles", "environments"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/easytocloud/aws-envs"
Repository = "https://github.com/easytocloud/aws-envs"

[project.scripts]
aws-envs-setup = "aws_envs_setup:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aws_envs_setup"]
